feat: add close button on mobile menu
This was really bugging me. I thought I wouldn't need it.

--- a/src/client/components/Header/Header.module.css
+++ b/src/client/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
-  @apply bg-white text-primary py-2 sm:py-4 mb-2;
+  @apply bg-white text-primary py-4 md:py-6 mb-2;
 }
 .center {
-  @apply container mx-auto px-4;
+  @apply container mx-auto;
 }
 .content {
   @apply flex justify-between items-center;
