--- a/src/global.css
+++ b/src/global.css
@@ -2,3 +2,20 @@
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
+
+body,
+p,
+a {
+  @apply text-copy;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  @apply text-primary;
+}
+
+h1 {
+  @apply text-3xl font-semibold;
+}
