--- a/src/client/containers/BookmarksContainer/BookmarksContainer.module.css
+++ b/src/client/containers/BookmarksContainer/BookmarksContainer.module.css
@@ -1,3 +1,3 @@
 .container {
-  @apply grid sm:grid-cols-2 md:grid-cols-3  gap-6 md:gap-x-8 md:gap-y-14;
+  @apply grid sm:grid-cols-2 md:grid-cols-3 2xl:grid-cols-4 gap-6 md:gap-x-8 md:gap-y-14;
 }
